Update Update Response Frontend Setting, Update Parameter Swagger Doc, Add Example Response 404 Swagger Doc
