# app/Http/Controllers/Api/VideoController.php
@@ -7,6 +7,7 @@ use App\Http\Resources\IndexVideoResource;
 use App\Http\Resources\VideoCollection;
 use App\Models\News;
 use Illuminate\Http\Request;
+use Symfony\Component\HttpFoundation\Response;
 
 class VideoController extends Controller
 {
@@ -16,9 +17,53 @@ class VideoController extends Controller
      *     tags={"Video"},
      *     path="/api/video/",
      *     security={{"Authentication_Token":{}}},
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="limit",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="category",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="headline",
+     *         @OA\Schema(type="string", enum = {1, 0})
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="max_id",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="editorpick",
+     *         @OA\Schema(type="string", enum = {1, 0})
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="alltype",
+     *         @OA\Schema(type="string", enum = {1, 0})
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="published",
+     *         @OA\Schema(type="string", enum = {1, 0})
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="sensitive",
+     *         @OA\Schema(type="string", enum = {1, 0})
+     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="success",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="bad request",
      *     ),
      *     @OA\Response(
      *         response=401,
@@ -60,7 +105,7 @@ class VideoController extends Controller
         if($request->get("editorpick")){
             $video->where('editor_pick', '=', $request->get('editorpick', ''));
         }
-        
+
         $all = News::with(['categories', 'tags'])->orderby('id');
         $alltype = $request->get('alltype', 1);
         if($alltype = 1){
@@ -90,8 +135,53 @@ class VideoController extends Controller
         return response()->json(new VideoCollection($video->paginate($limit)->withQueryString()));
     }
 
+    /**
+     * Get Video By ID
+     * @OA\Get (
+     *     tags={"Video"},
+     *     path="/api/video/{id}/",
+     *     security={{"Authentication_Token":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="success",
+     *     ),
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="bad request",
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="unauthorized",
+     *       @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="The security token is invalid"),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="not found",
+     *       @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="ID Not Found"),
+     *          )
+     *     )
+     * )
+     */
     public function show($id){
-        $video_news = News::with(['categories', 'tags','users', 'news_videos:id,video,news_id'])->where('id', $id)->get();
-        return response()->json(new IndexVideoResource($video_news[0]));        
+        $video_news = News::with(['categories', 'tags','users', 'news_videos:id,video,news_id'])
+            ->where('id', $id)
+            ->where('types','=','video')
+            ->where('is_published','=','1')
+            ->where('published_at','<=',now())
+            ->latest('published_at')
+            ->first();
+        if ($video_news==null){
+            return response()->json(['message'=>'ID Not Found'],Response::HTTP_NOT_FOUND);
+        }
+        return response()->json(new IndexVideoResource($video_news));
     }
 }
