# storage/api-docs/api-docs.json
@@ -20,6 +20,13 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "schema": {
+                            "type": "int"
+                        }
                     }
                 ],
                 "responses": {
@@ -57,9 +64,28 @@
                 ],
                 "summary": "Get Front End Menu",
                 "operationId": "ca367025a5ae2bd4e63bb903644d6bed",
+                "parameters": [
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "schema": {
+                            "type": "int"
+                        }
+                    },
+                    {
+                        "name": "nested",
+                        "in": "query",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success"
+                    },
+                    "400": {
+                        "description": "bad request"
                     },
                     "401": {
                         "description": "unauthorized",
@@ -96,6 +122,9 @@
                     "200": {
                         "description": "success"
                     },
+                    "400": {
+                        "description": "bad request"
+                    },
                     "401": {
                         "description": "unauthorized",
                         "content": {
@@ -130,6 +159,9 @@
                 "responses": {
                     "200": {
                         "description": "success"
+                    },
+                    "400": {
+                        "description": "bad request"
                     },
                     "401": {
                         "description": "unauthorized",
@@ -166,6 +198,9 @@
                     "200": {
                         "description": "success"
                     },
+                    "400": {
+                        "description": "bad request"
+                    },
                     "401": {
                         "description": "unauthorized",
                         "content": {
@@ -199,13 +234,6 @@
                 "operationId": "033c35292bfbfa0eba108f50805070ba",
                 "parameters": [
                     {
-                        "name": "limit",
-                        "in": "query",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
                         "name": "slug",
                         "in": "query",
                         "schema": {
@@ -216,6 +244,9 @@
                 "responses": {
                     "200": {
                         "description": "success"
+                    },
+                    "400": {
+                        "description": "bad request"
                     },
                     "401": {
                         "description": "unauthorized",
@@ -268,6 +299,9 @@
                     "200": {
                         "description": "success"
                     },
+                    "400": {
+                        "description": "bad request"
+                    },
                     "401": {
                         "description": "unauthorized",
                         "content": {
@@ -299,9 +333,90 @@
                 ],
                 "summary": "Get Video",
                 "operationId": "6f6eaa7b2fc7fe05750f9bc23fbfb0a2",
+                "parameters": [
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "category",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "headline",
+                        "in": "query",
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                1,
+                                0
+                            ]
+                        }
+                    },
+                    {
+                        "name": "max_id",
+                        "in": "query",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "editorpick",
+                        "in": "query",
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                1,
+                                0
+                            ]
+                        }
+                    },
+                    {
+                        "name": "alltype",
+                        "in": "query",
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                1,
+                                0
+                            ]
+                        }
+                    },
+                    {
+                        "name": "published",
+                        "in": "query",
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                1,
+                                0
+                            ]
+                        }
+                    },
+                    {
+                        "name": "sensitive",
+                        "in": "query",
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                1,
+                                0
+                            ]
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success"
+                    },
+                    "400": {
+                        "description": "bad request"
                     },
                     "401": {
                         "description": "unauthorized",
@@ -326,13 +441,77 @@
                     }
                 ]
             }
+        },
+        "/api/video/{id}/": {
+            "get": {
+                "tags": [
+                    "Video"
+                ],
+                "summary": "Get Video By ID",
+                "operationId": "5293f74a38bc0fa0bd7486250654c11e",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success"
+                    },
+                    "400": {
+                        "description": "bad request"
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The security token is invalid"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "ID Not Found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Authentication_Token": []
+                    }
+                ]
+            }
         }
     },
     "components": {
         "securitySchemes": {
             "Authentication_Token": {
                 "type": "apiKey",
-                "description": "An authorization header. Example: Token",
+                "description": "An authorization query. Example: ?token={{your token}}",
                 "name": "token",
                 "in": "query"
             }
